Mon Nov 22 00:13:35 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (dir_seek): should retrieve dir_data after NUM2INT().
	  [ruby-dev:24941]

Sat Nov 20 23:57:33 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/README (et al): Add a new directive, :section:, and
	  change the output format to accomodate. :section: allows to to
	  group together methods, attributes, constants, etc under
	  headings in the output. If used, a table of contents is
	  generated.

Sat Nov 20 23:56:54 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/options.rb (Options::parse): Force --inline-source if
	  --one-file option given

Sat Nov 20 23:55:19 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_splice): should place index wrapping after
	  possible modification.  [ruby-dev:24940]

Sat Nov 20 23:25:12 2004  Minero Aoki  <aamine@loveruby.net>

	* io.c (rb_io_getline): f.gets("") did not work. [ruby-core:03771]

	* test/ruby/test_io.rb (test_gets_rs): test it.

Sat Nov 20 22:55:09 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* test/runner.rb (CROSS_COMPILING): need to require rbconfig.rb before
	  using CROSS_COMPILNG.

Sat Nov 20 20:42:42 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/depend: fix ripper.o dependency.

Sat Nov 20 17:48:29 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (io_reopen): work around problem with Cygwin fseeko
	  returning ESPIPE.

Tue Nov 20 05:34:24 2004  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: original nkf.c rev:1.40

	* ext/nkf/test.rb: add test for mime encode/decode

Sat Nov 20 01:45:04 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* test/xmlrpc/test_webrick_server.rb : move `requrie "webrick/https"'
	  into #setup_http_server mohtod to avoid soap test errors.

Sat Nov 20 01:37:34 2004  Johan Holmberg  <holmberg@iar.se>

	* eval.c (error_print): nicer traceback at interrupt.
	  [ruby-core:03774]

Sat Nov 20 00:07:16 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
